--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/opentype.js": "^1.3.8",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
